<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LiveCaptureGast</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="no_cameras">Camera no found</string>
    <string name="camera">CAMERA</string>
    <string name="zoom">ZOOM</string>
    <string name="focus">FOCUS</string>
    <string name="set_parameters_failed">Set parameters failed:</string>
    <string name="flash">FLASH</string>
    <string name="whiteBalance">WHITEBALANCE</string>

</resources>
