<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TableLayout
        android:id="@+id/focus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3">

            <Button
                android:id="@+id/buttonSwitchCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/camera" >
            </Button>

            <Button
                android:id="@+id/buttonZoom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/zoom" >
            </Button>

            <Button
                android:id="@+id/buttonFocus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/focus" >
            </Button>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2" >

            <Button
                android:id="@+id/buttonFlash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/flash" >
            </Button>

            <Button
                android:id="@+id/buttonWhiteBalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/whiteBalance" >
            </Button>
        </LinearLayout>
    </TableLayout>

    <com.example.liaozongmeng.livecapturegast.Preview android:id="@+id/preview1"
        android:layout_width="match_parent" android:layout_height="match_parent"></com.example.liaozongmeng.livecapturegast.Preview>
</LinearLayout>